# agent

./: .dockerignore  .env.example  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
docs/: DELETION_LOG.md
docs/superpowers/plans/: 2026-05-12-agent-api-optimization.md
src/: main.py
src/agents/: __init__.py  agents.py  rag_assistant.py  registry.py  safeguard.py  tools.py
src/api/: deps.py  exceptions.py  rate_limit.py  service.py
src/api/middleware/: __init__.py  audit_log.py  request_id.py
src/api/routers/v1/: __init__.py  agent.py  ingestion.py
src/api/services/: title_generator.py
src/core/: __init__.py  config.py  litellm_embedding.py  llm.py  postgres.py
src/ingestion/: __init__.py  constants.py  embedder.py  md5_checker.py  pipeline.py  tasks.py  writer.py
src/schema/: ingestion.py  schema.py  vector.py
